--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,6 +1,11 @@
 .banner-section{
     position: relative;
 }
+
+.banner-img{
+    height: 450px;
+}
+
 .explore-btn{
     position: absolute;
     bottom: 80px;
