--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,11 +3,21 @@
 }
 
 .banner-img{
-    height: 450px;
+    height: 550px;
 }
 
 .explore-btn{
     position: absolute;
-    bottom: 80px;
+    bottom: 100px;
     left: 120px;
+}
+
+/* css media query for responsiveness */
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 600px) {
+    .explore-btn{
+        bottom: 370px;
+    }
+    
 }
