--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -1,4 +1,16 @@
 .products-section{
+    width: 80%;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
+}
+
+/* css media query for responsiveness */
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 600px) {
+    .products-section {
+        width: 90%;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    
 }
